[package]
name = "chronolog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["cargo"] }
dirs = "5.0.1"
edit = "0.1.5"
fzf-wrapped = "0.1.4"
regex = "1.10.6"
tempfile = "3.12.0"
walkdir = "2.5.0"
